--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <a href="https://instagram.com/fake_account_not_found_456" class="instagram"><i class="fab fa-instagram"></i></a>
             <a href="https://twitter.com/this_user_does_not_exist_123" class="twitter"><i class="fab fa-twitter"></i></a>
         </div>
-        
         <div class="contact-info">
+          <a href="https://www.google.com/maps?q=14.6921769,121.0829287">
+            <i class="fas fa-map-marker-alt"></i></a><br>
             <a href="tel:+639912335876"><i class="fa-solid fa-phone"></i></a><br>
             <a href="mailto:izermed@gmail.com"><span><i class="fa-solid fa-envelope"></i></span></a><br>
         </div>
@@ -31,11 +32,6 @@
             <div class="logo">
                 <img src="izerlogo.jpg" alt="Izer Med Pharmacy">
                 <span>IzerMed Pharmacy</span>
-            </div>
-            <div class="store-locatorr">
-                <a href="https://www.google.com/maps?q=14.6921769,121.0829287" target="_blank">
-                    <i class="fas fa-map-marker-alt"></i> Store Locator
-                </a>
             </div>
 
             <div class="search-box">
