--- a/try.html
+++ b/try.html
@@ -1,172 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Izer Med Pharmacy</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login and Sign Up</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #34A853, #1DA1F2);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+        }
+        .container {
+            width: 100%;
+            max-width: 400px;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            padding: 40px 30px;
+            text-align: center;
+            transform: translateY(-20px);
+            opacity: 0;
+            animation: fadeIn 0.6s forwards;
+        }
+        h2 {
+            margin-bottom: 20px;
+            color: #333;
+            font-size: 2em;
+            transition: color 0.3s ease;
+        }
+
+        .form {
+            display: none;
+            animation: slideUp 0.5s ease-out;
+        }
+
+        .form.active {
+            display: block;
+        }
+
+        input[type="text"], input[type="password"], input[type="email"] {
+            width: 100%;
+            padding: 12px;
+            margin: 12px 0;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            font-size: 1em;
+            transition: all 0.3s ease;
+        }
+
+        input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
+            border-color: #34A853;
+            outline: none;
+            transform: scale(1.03);
+        }
+
+        button {
+            width: 100%;
+            padding: 12px;
+            background-color: #34A853;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #1DA1F2;
+            transform: scale(1.05);
+        }
+
+        .switch {
+            margin-top: 20px;
+            font-size: 1em;
+            color: #555;
+        }
+
+        .switch a {
+            color: #34A853;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        .switch a:hover {
+            color: #1DA1F2;
+        }
+
+        .forgot-password {
+            text-align: center;
+            margin-top: 10px;
+            font-size: 0.9em;
+        }
+
+        .forgot-password a {
+            color: #34A853;
+            text-decoration: none;
+            transition: text-decoration 0.3s ease;
+        }
+
+        .forgot-password a:hover {
+            text-decoration: underline;
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes slideUp {
+            from {
+                transform: translateY(20px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+    </style>
 </head>
+<body>
 
-<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(to bottom, #f5f5f5, #d6e5d8); color: #333;">
-
-  <header>
-    <nav id="navbar">
-      <div class="logo">Izer Med</div>
-      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li>
-          <a href="#" onclick="toggleDropdown(this)">Medicine ▼</a>
-          <ul class="dropdown">
-            <li><a href="#antibiotics">Antibiotics</a></li>
-            <li><a href="#painrelievers">Pain Relievers</a></li>
-            <li><a href="#vitamins">Vitamins</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#" onclick="toggleDropdown(this)">Blog ▼</a>
-          <ul class="dropdown">
-            <li><a href="#news">News</a></li>
-            <li><a href="#healthtips">Health Tips</a></li>
-          </ul>
-        </li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="home">
-    <h1>Welcome to Izer Med Pharmacy</h1>
-    <p>Your one-stop solution for all your medical needs.</p>
-  </section>
-
-  <section class="featured-products">
-    <h2>Featured Products of the Month</h2>
-    <section class="carousel-container">
-      <div class="carousel-track">
-        <div class="product-slide">
-          <img src="11.png" alt="Pocari sweat ion" />
-          <h3>Pocari Sweat Ion</h3>
-          <p class="price">₱3,450.00</p>
-        </div>
-        <div class="product-slide">
-          <img src="15.png" alt="Creamsilk Hairfall Defense" />
-          <h3>Creamsilk Hairfall Defense</h3>
-          <p class="price">₱1,200.00</p>
-        </div>
-        <div class="product-slide">
-          <img src="14.png" alt="Safeguard Floral Pink" />
-          <h3>Safeguard Floral Pink</h3>
-          <p class="price">₱990.00</p>
-        </div>
-      </div>
-      <button class="carousel-btn left">&#10094;</button>
-      <button class="carousel-btn right">&#10095;</button>
-      <div class="carousel-dots">
-        <span class="dot"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-      </div>
-    </section>
-  </section>
-
-  <section class="testimonials">
-    <h2>What Our Customers Say</h2>
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <p>"Great selection and fast delivery. Highly recommend!"</p>
-          <h4>- Maria G.</h4>
-        </div>
-        <div class="swiper-slide">
-          <p>"Affordable prices and friendly service every time."</p>
-          <h4>- Juan D.</h4>
-        </div>
-        <div class="swiper-slide">
-          <p>"Their online ordering system is so convenient."</p>
-          <h4>- Liza M.</h4>
-        </div>
-      </div>
-      <div class="swiper-pagination"></div>
+<div class="container">
+    <div class="tabs">
+        <div class="tab active" id="loginTab"></div>
+        <div class="tab" id="signUpTab"></div>
     </div>
-  </section>
 
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Izer Med Pharmacy is dedicated to providing high-quality medicines and healthcare products at affordable prices. Our team is committed to ensuring every customer receives the best service possible.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Get In Touch</h2>
-    <form>
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Izer Med Pharmacy. All rights reserved.</p>
-    <div>
-      <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">TikTok</a>
+    <div class="form active" id="loginForm">
+        <h2>Login</h2>
+        <form>
+            <input type="text" id="loginEmail" placeholder="Email" required>
+            <input type="password" id="loginPassword" placeholder="Password" required>
+            <div class="forgot-password">
+                <a href="#">Forgot Password?</a>
+            </div>
+            <button type="submit">Login</button>
+        </form>
+        <div class="switch">
+            <p>Don't have an account? <a href="#" id="toSignUp">Sign up</a></p>
+        </div>
     </div>
-  </footer>
 
-  <script>
-    function toggleMenu() {
-      const navbar = document.getElementById("navbar");
-      navbar.classList.toggle("active");
-    }
+    <div class="form" id="signUpForm">
+        <h2>Sign Up</h2>
+        <form id="signUpFormElement" onsubmit="return validateForm()">
+            <input type="text" id="firstName" placeholder="First Name" required>
+            <input type="text" id="lastName" placeholder="Last Name" required>
+            <input type="email" id="signUpEmail" placeholder="Email" required>
+            <input type="password" id="signUpPassword" placeholder="Password" required minlength="6">
+            <button type="submit">Sign Up</button>
+        </form>
+        <div class="switch">
+            <p>Already have an account? <a href="#" id="toLogin">Login</a></p>
+        </div>
+    </div>
+</div>
 
-    function toggleDropdown(element) {
-      const dropdown = element.nextElementSibling;
-      dropdown.classList.toggle("show");
-    }
+<script>
+    const loginTab = document.getElementById('loginTab');
+    const signUpTab = document.getElementById('signUpTab');
+    const loginForm = document.getElementById('loginForm');
+    const signUpForm = document.getElementById('signUpForm');
+    const toSignUp = document.getElementById('toSignUp');
+    const toLogin = document.getElementById('toLogin');
+    const signUpFormElement = document.getElementById('signUpFormElement');
 
-    let slideIndex = 0;
-    const slides = document.querySelectorAll(".product-slide");
-    const dots = document.querySelectorAll(".dot");
-
-    function goToSlide(index) {
-      slideIndex = index;
-      document.querySelector(".carousel-track").style.transform = `translateX(-${index * 100}%)`;
-      dots.forEach(dot => dot.classList.remove("active"));
-      dots[index].classList.add("active");
-    }
-
-    document.querySelector(".carousel-btn.left").addEventListener("click", () => {
-      slideIndex = (slideIndex - 1 + slides.length) % slides.length;
-      goToSlide(slideIndex);
+    loginTab.addEventListener('click', () => {
+        loginTab.classList.add('active');
+        signUpTab.classList.remove('active');
+        loginForm.classList.add('active');
+        signUpForm.classList.remove('active');
     });
 
-    document.querySelector(".carousel-btn.right").addEventListener("click", () => {
-      slideIndex = (slideIndex + 1) % slides.length;
-      goToSlide(slideIndex);
+    signUpTab.addEventListener('click', () => {
+        signUpTab.classList.add('active');
+        loginTab.classList.remove('active');
+        signUpForm.classList.add('active');
+        loginForm.classList.remove('active');
     });
 
-    goToSlide(0);
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 1,
-      spaceBetween: 30,
-      loop: true,
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      autoplay: {
-        delay: 3500,
-        disableOnInteraction: false,
-      },
+    toSignUp.addEventListener('click', (e) => {
+        e.preventDefault();
+        signUpTab.click();
     });
-  </script>
+
+    toLogin.addEventListener('click', (e) => {
+        e.preventDefault();
+        loginTab.click();
+    });
+
+    function validateForm() {
+        const email = document.getElementById("signUpEmail").value;
+        const password = document.getElementById("signUpPassword").value;
+
+        // Validate email format
+        const emailRegex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$/;
+        if (!emailRegex.test(email)) {
+            alert("Please enter a valid email address.");
+            return false;
+        }
+
+        // Validate that password is not empty and has a minimum length of 6
+        if (password.trim() === "") {
+            alert("Password is required.");
+            return false;
+        }
+
+        if (password.length < 6) {
+            alert("Password must be at least 6 characters long.");
+            return false;
+        }
+
+        // If all validations pass
+        return true;
+    }
+</script>
 
 </body>
 </html>
