--- a/Signup.html
+++ b/Signup.html
@@ -273,7 +273,7 @@
         <button type="submit">Sign Up</button>
       </form>
       <div class="switch">
-        <p>Already have an account? <a href="Login.html">Login</a></p>
+        <p>Already have an account? <a href="login.html">Login</a></p>
       </div>
     </div>
   </div>
